Nav bar and fixed jumping reflection

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -2,12 +2,24 @@
 
 .navbar--container{
     width: 100%;
-    height: 80px;
+    height: 50px;
     position: fixed;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     //padding: 0% 5%;
     box-sizing: border-box;
+    z-index:2;
+    background-color: transparent;
+    transition: background-color 100ms ease-in-out;
+    transition: transform 100ms ease-in-out;
+    &.dark{
+        background-color: $primary-dark;
+    }
+
+    &.hidden{
+        transform: translateY(-50px)
+    }
 }
 
 .navbar__tabs{
